[package]
name = "rocket-maud-htmx-h5bp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maud = { git = "https://github.com/tamc/maud.git", branch = "rocket-0.5.0-rc.2", features = ["rocket"] }
rocket = "0.5.0-rc.2"
